# palate-detector

./: .editorconfig  .gitignore  README.md  package.json
.claude/: settings.local.json
.claude/skills/jira-task-generator/: SKILL.md
.claude/skills/jira-task-generator/references/: jira-task-examples.md  jira-template-format.md
ai-service/: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.py  setup_venv.ps1
ai-service/models/: __init__.py  schemas.py
ai-service/routers/: __init__.py  detection.py
ai-service/services/: __init__.py  detection.py
ai-service/tests/: __init__.py  conftest.py  test_detection.py  test_main.py
docs/: dev-setup-guide.md  lpr_prd_feature_checklist.md  lpr_task_breakdown.md
docs/tasks/: C1-rtsp-stream-connection.md  C2-frame-capture-loop.md  C3-stream-to-frontend.md  C4-camera-crud-api.md  C5-camera-persistence.md  T1-repository-structure-setup.md  T2-tauri-react-vite-init.md  T3-python-ai-service-init.md  T4-dev-environment-docs.md
plans/: t1.md
plans/reports/: brainstorm-260305-1557-lpr-prd-analysis.md  jira-260305-1650-t2-tauri-react-vite-init.md  jira-260305-1652-t3-python-ai-service-init.md  jira-260305-1652-t4-dev-environment-docs.md  pm-260305-1704-timeline-dependency-map.md
src/: index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/src/: App.tsx  main.tsx
