[project]
name = "palate-detector-ai"
version = "0.1.0"
description = "License Plate Recognition AI Service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "opencv-python>=4.9.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"